# RiskVision

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  requirements.txt
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/data/model_training/heart_disease/: X_train.csv
backend/data/model_training/stroke/: X_test.csv  y_test.csv  y_train.csv
backend/models/diabetes/: diabetes.pkl  scaler.pkl
backend/models/heart_disease/: scaler.pkl
backend/models/stroke/: stroke.pkl
backend/notebooks/diabetes/: EDA.ipynb  data_cleaning.ipynb  model_training.ipynb
backend/notebooks/heart_disease/: EDA.ipynb  model_training.ipynb
backend/notebooks/kidney_disease/: EDA.ipynb  data_cleaning.ipynb
backend/notebooks/stroke/.ipynb_checkpoints/: EDA-checkpoint.ipynb
backend/static/css/: predictRisk.css
backend/streamlit/tests/: app.py
backend/streamlit/views/: prediction.py
backend/templates/: diseasesInput.html  predictRisk.html
backend/tests/: stroke-predict.pkl  test.ipynb  test.py  test.txt
config/: config.py  features.json  features_metadata.py
data/model_training/: X_train.csv
data/processed/: diabetes.csv  heart_disease.csv  stroke.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx  (+2 more)
models/: encoder.pkl
notebooks/: EDA.ipynb  features_selection.ipynb  model_training.ipynb
streamlit/: app.py
templates/: diseasesInput.html  index.html  predictRisk.html
tests/: X_test.csv  test.html  test.ipynb  test.py
utils/: modules.py  predict.py  process_features.py  save_features.py
(+39 files in other folders)
